--- a/website/stylesheets-vmail/site.css
+++ b/website/stylesheets-vmail/site.css
@@ -25,7 +25,9 @@ img.screenshot {
 }
 .sidebar h4 {
   font-size: 16px;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.75em;
+  clear:left;
+  margin-top: 1.25em;
 }
 .sidebar ul {
   list-style: none;
