lightbox for screens on vmail webpage

--- a/website/stylesheets-vmail/site.css
+++ b/website/stylesheets-vmail/site.css
@@ -46,4 +46,7 @@ table.pin td {
 .purple {color:purple; font-weight:bold}
 .blue {color:blue; font-weight:bold}
 
-
+#main img {
+  width: 250px;
+  
+}
