more webpage copy

--- a/website/stylesheets-vmail/site.css
+++ b/website/stylesheets-vmail/site.css
@@ -48,5 +48,12 @@ table.pin td {
 
 #main img {
   width: 250px;
-  
 }
+pre {
+  background-color: #ECECEC;
+}
+code {
+  background-color: #ECECEC;
+  font-size: 15px;
+}
+
